# test-tracker

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile
client/: Cargo.toml  Trunk.toml  index.html  main.scss
client/src/: main.rs  web.rs
client/src/comps/: completion.rs  error_message.rs  list_of_tests_and_completions.rs  login_form.rs  mod.rs  navbar.rs  test_and_completions.rs
server/: Cargo.toml
server/migrations/2023-04-01-133946_users/: down.sql  up.sql
server/migrations/2023-04-11-200037_tests/: up.sql
server/migrations/2023-04-11-205422_completions/: up.sql
server/src/: main.rs  passwords.rs  tests_and_completions.rs
server/src/db/: mod.rs  models.rs  schema.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs
