[package]
name = "test-tracker-client"
version = "0.1.0-dev"
edition = "2021"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
description = "This is the server half of TestTracker."
license = "GPL-3.0"

[dependencies]
console_error_panic_hook = "0.1.7"
reqwest-wasm = "0.11.16"
ron = "0.8.0"
test-tracker-shared = { path = "../shared" }
tracing = "0.1.37"
tracing-unwrap = "0.10.0"
tracing-wasm = "0.2.1"
yew = { version = "0.20.0", features = ["csr"] }
