[package]
name = "test-tracker-server"
version = "0.1.0-dev"
edition = "2021"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
description = "This is the server half of TestTracker."
license = "GPL-3.0"

[dependencies]
argon2 = "0.5.0"
chrono.workspace = true
color-eyre = "0.6.2"
diesel = { workspace = true, features = ["chrono", "postgres"] }
rand = "0.8.5"
ron.workspace = true
test-tracker-shared = { path = "../shared", features = ["diesel", "hashing"] }
thiserror.workspace = true
tiny_http = { version = "0.12.0", features = ["ssl-openssl"] }
tokio = { version = "1.27.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing.workspace = true
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
tracing-unwrap = "0.10.0"
