[package]
name = "test-tracker-shared"
version = "0.1.0-dev"
edition = "2021"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
description = "This is the shared library for TestTracker."
license = "GPL-3.0"

[dependencies]
diesel = { version = "2.0.3", optional = true }
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"

[features]
diesel = ["dep:diesel"]
