[package]
name = "test-tracker-shared"
version = "0.1.0-dev"
edition = "2021"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
description = "This is the shared library for TestTracker."
license = "GPL-3.0"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
diesel = { workspace = true, optional = true }
password-hash = { version = "0.5.0", optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[features]
diesel = ["dep:diesel"]
hashing = ["dep:password-hash"]
